kubernetes/practice/3.pod-with-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-annotation
  labels:
    environment: dev
  annotations:
    description: "nginx pod with annotation"
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
