kubernetes/practice/5.pod-with-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-probe
  labels:
    environment: development
  annotations:
    description: "nginx with probe"
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      livenessProbe:
        httpGet:
          path: /404
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 5
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
      # readinessProbe:
      #   httpGet:
      #     path: /
      #     port: 80
      #   initialDelaySeconds: 0
      #   periodSeconds: 10
      #   timeoutSeconds: 1
      #   successThreshold: 1
      #   failureThreshold: 3
      # startupProbe:
      #   httpGet:
      #     path: / 
      #     port: 80
      #   initialDelaySeconds: 0
      #   periodSeconds: 10
      #   timeoutSeconds: 1
      #   successThreshold: 1
      #   failureThreshold: 3
