kubernetes/practice/deployment-full-fix.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-web
  labels:
    app: nodejs-web
spec:
  selector:
    matchLabels:
      app: nodejs-web
  template:
    metadata:
      labels:
        app: nodejs-web
    spec:
      containers:
        - name: nodejs-web
          image: khannedy/nodejs-web:1
          ports:
            - containerPort: 3000
        - name: nodejs-env
          image: khannedy/nodejs-env
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: nodejs-web-service
spec:
  type: NodePort
  selector:
    app: nodejs-web
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
    - host: nginx.straile.blue
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-web-service
                port:
                  number: 80
